--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings_menu.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="notification_menu_rm_a">모든 알림 삭제</string>
-    <string name="notification_menu_rm_recent">최근 알림 1개 삭제</string>
+    <string name="notificationMenuRemoveAll">모든 알림 삭제</string>
+    <string name="notificationMenuRemoveRecent">최근 알림 1개 삭제</string>
 </resources>
