--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_login.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_login.xml
@@ -30,14 +30,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="10"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="10">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,30 +49,30 @@
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/formFontColor"
-                android:text="EMAIL ADDRESS" />
+                android:text="@string/tvLoginActEmail"
+                android:textColor="@color/formFontColor" />
 
             <EditText
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="press email"
-                android:inputType="textPersonName" />
+                android:hint="@string/etLoginActEmail"
+                android:inputType="textEmailAddress" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/formFontColor"
-                android:text="PASSWORD" />
+                android:text="@string/tvLoginActPassword"
+                android:textColor="@color/formFontColor" />
 
             <EditText
                 android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="press password"
+                android:hint="@string/etLoginActPassword"
                 android:inputType="textPassword" />
 
             <ImageView
@@ -91,11 +91,11 @@
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_margin="40dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="40dp"
                 android:gravity="center"
-                android:text="@string/login_act_forgot_password" />
+                android:text="@string/tvLoginActForgotPassword" />
 
         </LinearLayout>
 
@@ -103,8 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:orientation="vertical">
-        </LinearLayout>
+            android:orientation="vertical" />
     </LinearLayout>
 
 
