--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_teacher_practice_detail.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_teacher_practice_detail.xml
@@ -47,7 +47,7 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/a_old_l"
                 android:gravity="center"
-                android:text="노래제목"
+                android:text="@string/tvPracticeMusicName"
                 android:textColor="@color/white"
                 android:textSize="20dp" />
 
@@ -121,7 +121,7 @@
                         android:fontFamily="@font/a_old_l"
                         android:gravity="left"
                         android:paddingLeft="10dp"
-                        android:text="선생님이름"
+                        android:text="@string/tvPracticeMusicTeacherName"
                         android:textColor="@color/white"
                         android:textSize="20dp" />
 
@@ -132,7 +132,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:text="파일주소" />
+                    android:text="@string/tvPracticeMusicFilePath" />
             </LinearLayout>
 
         </LinearLayout>
