나몰빼미로 스트링만 바꿔놓음

--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings_nav.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings_nav.xml
@@ -10,8 +10,8 @@
     <string name="appName">MusicInstrumentLessoner</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">GirlsDay mina</string>
-    <string name="nav_header_subtitle">justkukaro@naver.com</string>
+    <string name="nav_header_title">나몰빼미</string>
+    <string name="nav_header_subtitle">namolppam@pocket.mon</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 </resources>
