--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/fragment_template.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/fragment_template.xml
@@ -22,7 +22,7 @@
     <!--<TextView-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="wrap_content"-->
-    <!--android:text="TemplateDto Fragment" />-->
+    <!--android:text="MusicTemplateDto Fragment" />-->
 
     <ScrollView
         android:layout_width="match_parent"
