--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/xml/network_security_config.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.0.3</domain>
         <domain includeSubdomains="true">192.168.43.36</domain>
+        <domain includeSubdomains="true">172.30.66.122</domain>
     </domain-config>
 </network-security-config>
