--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/xml/network_security_config.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/xml/network_security_config.xml
@@ -4,5 +4,6 @@
         <domain includeSubdomains="true">192.168.0.3</domain>
         <domain includeSubdomains="true">192.168.43.36</domain>
         <domain includeSubdomains="true">172.30.66.122</domain>
+        <domain includeSubdomains="true">175.199.255.108</domain>
     </domain-config>
 </network-security-config>
