--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/menu/template_menu.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/menu/template_menu.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="make template" />
+    <item
+        android:id="@+id/templateMenuMakeTemplateItem"
+        android:title="upload template" />
     <item android:title="remove template" />
     <item android:title="edit template" />
 </menu>
