--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/layout_notification.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/layout_notification.xml
@@ -15,7 +15,7 @@
         android:adjustViewBounds="true"
         android:maxHeight="50dp"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/choa_round" />
+        app:srcCompat="@drawable/namolppami_round" />
 
     <LinearLayout
         android:layout_width="match_parent"
