연습 상세 코멘트 추가

--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings_lay_template_practice.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/values/strings_lay_template_practice.xml
@@ -2,7 +2,7 @@
 <resources>
     <!--real resource-->
     <string name="LayTemplatePracticeMusicNum">No.</string>
-    <string name="LayTemplatePracticeSuccessPercent">곡 완성도 : </string>
+    <string name="LayTemplatePracticeSuccessPercent">완성도 : </string>
     <string name="LayTemplatePracticeSuccessPercentEnd">%</string>
     <string name="LayTemplatePracticeViewDetail">view detail</string>
     <string name="LayTemplatePracticeAdd">add practice</string>
