--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_debug.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_debug.xml
@@ -59,6 +59,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/ivStudentProfile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
