--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/drawable/template_positive_lay_rounded.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/drawable/template_positive_lay_rounded.xml
@@ -9,7 +9,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="3dp"
-                android:color="@color/positiveGreen" />
+                android:color="@color/positivePractice" />
             <corners android:radius="10dip"/>
             <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
         </shape>
