--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_add_template.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_add_template.xml
@@ -83,6 +83,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="@color/colorMainBackGround"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -91,6 +92,7 @@
             android:layout_height="50dp"
             android:layout_margin="10dp"
             android:background="@drawable/add_template_item_rounded"
+            android:backgroundTint="@color/black"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:orientation="horizontal"
@@ -144,6 +146,7 @@
             android:layout_height="50dp"
             android:layout_margin="10dp"
             android:background="@drawable/add_template_item_rounded"
+            android:backgroundTint="@color/black"
             android:orientation="horizontal"
             android:padding="10dp"
             android:weightSum="1">
@@ -195,6 +198,7 @@
             android:layout_height="50dp"
             android:layout_margin="10dp"
             android:background="@drawable/add_template_item_rounded"
+            android:backgroundTint="@color/black"
             android:orientation="horizontal"
             android:padding="10dp"
             android:weightSum="1">
@@ -254,8 +258,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="@string/actAddTemplateInputFile"
-                    android:textColor="@color/positiveGreen" />
+                    android:text="@string/actAddTemplateInputFile" />
             </LinearLayout>
         </LinearLayout>
 
@@ -264,6 +267,7 @@
             android:layout_height="50dp"
             android:layout_margin="10dp"
             android:background="@drawable/add_template_item_rounded"
+            android:backgroundTint="@color/black"
             android:orientation="horizontal"
             android:padding="10dp"
             android:weightSum="1">
@@ -300,14 +304,14 @@
                     android:layout_height="wrap_content"
                     android:gravity="left"
                     android:text="@string/actAddTemplateInputMusic"
-                    android:textColor="@color/inputMusic" />
+                    android:textColor="@color/formFontColor" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="0.9">
+                android:layout_weight="0.9"
+                android:gravity="center">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -323,8 +327,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="@string/actAddTemplateInputFile"
-                    android:textColor="@color/positiveGreen" />
+                    android:text="@string/actAddTemplateInputFile" />
             </LinearLayout>
         </LinearLayout>
 
@@ -333,6 +336,7 @@
             android:layout_height="50dp"
             android:layout_margin="10dp"
             android:background="@drawable/add_template_item_rounded"
+            android:backgroundTint="@color/black"
             android:orientation="horizontal"
             android:padding="10dp"
             android:weightSum="1">
@@ -375,8 +379,9 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="0.9" >
+                android:layout_weight="0.9"
+                android:gravity="center">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -391,17 +396,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="@string/actAddTemplateInputFile"
-                    android:textColor="@color/positiveGreen" />
+                    android:text="@string/actAddTemplateInputFile" />
             </LinearLayout>
 
         </LinearLayout>
+
         <Button
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/actAddTemplateBtn"/>
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/actAddTemplateBtn" />
     </LinearLayout>
 </LinearLayout>
