--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/menu/group_menu.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/menu/group_menu.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="make group" />
-    <item android:title="remove group" />
-    <item android:title="edit group" />
-    <item android:title="widthdrawal group" />
+    <item android:title="그룹 만들기" />
+    <item android:title="그룹 삭제하기" />
+    <item android:title="그룹 수정하기" />
 </menu>
