--- a/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_template_detail.xml
+++ b/lessoner/MusicInstrumentLessoner/MusicInstrumentLessoner/app/src/main/res/layout/activity_template_detail.xml
@@ -121,6 +121,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
+                android:gravity="center_horizontal"
                 android:text="TextView" />
 
         </LinearLayout>
@@ -130,16 +131,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            android:weightSum="1"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:weightSum="1">
 
             <ImageView
                 android:id="@+id/ivTemplateDetailActGuide"
@@ -176,8 +177,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:paddingLeft="10dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="10dp">
 
                 <ImageView
                     android:id="@+id/ivTemplateDetailLayTeacherListen"
@@ -196,8 +197,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:padding="10dp"
-                android:textColor="@color/musicPersonalColor"
-                android:text="@string/tvActTemplateDetailListenTeacherMusic" />
+                android:text="@string/tvActTemplateDetailListenTeacherMusic"
+                android:textColor="@color/musicPersonalColor" />
         </LinearLayout>
     </LinearLayout>
 
